@@ -4,6 +4,7 @@
 
 === 0.5.3 ===
 - Added LSP_DSP_UNITS_SOUND_SPEED_M_S constant that defines sound speed.
+- Added reset() method to the dspu::Equalizer class to reset internal memory.
 
 === 0.5.2 ===
 * Updated tracing information.
